--- a/com.framework/test-output/old/Suite/methods-alphabetical.html
+++ b/com.framework/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99f37e">  <td>19/06/16 22:41:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.framework.testcases.Testcasewithframework@5622fdf]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>19/06/16 22:41:21</td>   <td>-743</td> <td title="&gt;&gt;BaseClass.setupsuite()[pri:0, instance:com.framework.testcases.Testcasewithframework@5622fdf]">&gt;&gt;setupsuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="99f37e">  <td>19/06/16 22:42:04</td>   <td>42466</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.framework.testcases.Testcasewithframework@5622fdf]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
-<tr bgcolor="eff760">  <td>19/06/16 22:41:32</td>   <td>10997</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcasewithframework.test()[pri:0, instance:com.framework.testcases.Testcasewithframework@5622fdf]">test</td> 
-  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>19/06/17 22:00:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.framework.testcases.Testcasewithframework@6a41eaa2]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>19/06/17 22:00:43</td>   <td>-1124</td> <td title="&gt;&gt;BaseClass.setupsuite()[pri:0, instance:com.framework.testcases.Testcasewithframework@6a41eaa2]">&gt;&gt;setupsuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>19/06/17 22:01:08</td>   <td>23992</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.framework.testcases.Testcasewithframework@6a41eaa2]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="c87b81">  <td>19/06/17 22:01:07</td>   <td>22812</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardownMessage(org.testng.ITestResult)[pri:0, instance:com.framework.testcases.Testcasewithframework@6a41eaa2]">&lt;&lt;teardownMessage</td> 
+<td>&nbsp;</td>  <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="fbd876">  <td>19/06/17 22:00:53</td>   <td>9646</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcasewithframework.test()[pri:0, instance:com.framework.testcases.Testcasewithframework@6a41eaa2]">test</td> 
+  <td>main@267760927</td>   <td></td> </tr>
 </table>
