--- a/com.framework/test-output/old/Suite/reporter-output.html
+++ b/com.framework/test-output/old/Suite/reporter-output.html
@@ -1,1 +1,9 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Setup will do</td></tr>
+<tr><td>Setup done and test cases are executing</td></tr>
+<tr><td>Browser launching</td></tr>
+<tr><td>Browser lauched</td></tr>
+<tr><td>Test in After method</td></tr>
+<tr><td>Test completed and Reports generated</td></tr>
+<tr><td>Quiting</td></tr>
+<tr><td>Quiting done</td></tr>
+</table>
