--- a/com.framework/test-output/old/Suite/methods-alphabetical.html
+++ b/com.framework/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c87b81">  <td>19/06/17 22:58:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.framework.testcases.Testcasewithframework@6a41eaa2]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@267760927</td>   <td></td> </tr>
-<tr bgcolor="c87b81">  <td>19/06/17 22:58:25</td>   <td>-851</td> <td title="&gt;&gt;BaseClass.setupsuite()[pri:0, instance:com.framework.testcases.Testcasewithframework@6a41eaa2]">&gt;&gt;setupsuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@267760927</td>   <td></td> </tr>
-<tr bgcolor="c87b81">  <td>19/06/17 22:58:53</td>   <td>27388</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.framework.testcases.Testcasewithframework@6a41eaa2]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@267760927</td>   <td></td> </tr>
-<tr bgcolor="c87b81">  <td>19/06/17 22:58:52</td>   <td>26446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardownMessage(org.testng.ITestResult)[pri:0, instance:com.framework.testcases.Testcasewithframework@6a41eaa2]">&lt;&lt;teardownMessage</td> 
-<td>&nbsp;</td>  <td>main@267760927</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>19/06/17 22:58:37</td>   <td>10738</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcasewithframework.test()[pri:0, instance:com.framework.testcases.Testcasewithframework@6a41eaa2]">test</td> 
-  <td>main@267760927</td>   <td></td> </tr>
+<tr bgcolor="70999e">  <td>19/06/17 23:56:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String, java.lang.String)[pri:0, instance:com.framework.testcases.Testcasewithframework@5622fdf]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="70999e">  <td>19/06/17 23:56:31</td>   <td>-843</td> <td title="&gt;&gt;BaseClass.setupsuite()[pri:0, instance:com.framework.testcases.Testcasewithframework@5622fdf]">&gt;&gt;setupsuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="70999e">  <td>19/06/17 23:57:05</td>   <td>32696</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:com.framework.testcases.Testcasewithframework@5622fdf]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="70999e">  <td>19/06/17 23:57:04</td>   <td>31639</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardownMessage(org.testng.ITestResult)[pri:0, instance:com.framework.testcases.Testcasewithframework@5622fdf]">&lt;&lt;teardownMessage</td> 
+<td>&nbsp;</td>  <td>main@1268066861</td>   <td></td> </tr>
+<tr bgcolor="e8b466">  <td>19/06/17 23:56:44</td>   <td>11998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcasewithframework.test()[pri:0, instance:com.framework.testcases.Testcasewithframework@5622fdf]">test</td> 
+  <td>main@1268066861</td>   <td></td> </tr>
 </table>
