--- a/com.framework/test-output/old/Default suite/reporter-output.html
+++ b/com.framework/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,3 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Setup will do</td></tr>
+<tr><td>Setup done and test cases are executing</td></tr>
+</table>
