--- a/com.framework/test-output/old/Default suite/methods-alphabetical.html
+++ b/com.framework/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eff760">  <td>19/06/16 22:15:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Testcasewithframework.test()[pri:0, instance:com.framework.testcases.Testcasewithframework@53b32d7]">test</td> 
-  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="6297b6">  <td>19/06/26 19:57:33</td>   <td>0</td> <td title="&gt;&gt;BaseClass.setupsuite()[pri:0, instance:com.databaseconnectivity.Database@464bee09]">&gt;&gt;setupsuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1635756693</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>19/06/26 19:57:34</td>   <td>1110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Database.test1()[pri:0, instance:com.databaseconnectivity.Database@464bee09]">test1</td> 
+  <td>main@1635756693</td>   <td></td> </tr>
 </table>
